--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,3 +1,15 @@
 <h1>Kenneth Ward</h1>
 <h2>About</h2>
-<p>Student</p>
+<P>I'm a Code The dream Student, working to become a software engineer, 
+    or Cloud Engineer</P>
+<h2>Experience</h2>
+<ul>
+    <li>Code Tenderloin</li>
+    <li>Leet Code</li>
+    <li>Code The Dream</li>
+</ul>
+<h2>Connect</h2>
+<ul>
+    <li>kenwardjr8592@gmail.com</li>
+    <li>a hreft=https://github.com/kenward85/kenward85>Github</a></ul></li>
+</ul>
