Added HTML boilerplate and markup

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h2>Connect</h2>
 <ul>
     <li>kenwardjr8592@gmail.com</li>
-    <li><a href="https://github.com/kenward85/kenward85">Github</a></ul></li>
+    <li><a href="https://github.com/kenward85/kenward85">Github</a></li>
 </ul>
 </section>
 </body>
