--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 </section>
 <section id = "skills">
     <h2>Skills</h2>
+    </u1>
+
+    </u1>
 
 </section>
 <section id ="projects">
@@ -55,3 +58,6 @@
 </body>
 </html>
 </head>
+<script src="js/index.js"></script>
+</body>
+</html>
