--- a/index.html
+++ b/index.html
@@ -1,57 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset ="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kenneth Ward - Personal Portfolio</title>
-</link href="./css/index.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Open API Project</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#connect">Connect</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="skills">Connect</a></li>
-        </ul>
-    </nav>
-<h1>Kenneth Ward</h1>
-<section id="about">
-<h2>About</h2>
-<p>I'm a Code The dream Student, working to become a software engineer, 
-    or Cloud Engineer</P>
-</section>
-<section id="experience">
-    <h2>Experience</h2>
-    <div class="experience-item">
-        <div class="job-details">
-            <div class ="job-title">Software Developer</div>
-            <div class="job-dates">2020 - Present</div>
-        </div>
-        <div class="job-description">Responsible for developing web applications using various technologies.</div>
-    </div>
-    <ul>
-        <li>Code Tenderloin</li>
-        <li>Leet Code</li>
-        <li>Code The Dream</li>
-    </ul>
-</section>
-<section id = "skills">
-    <h2>Skills</h2>
-
-</section>
-<section id ="projects">
-    <h2>Projects</h2>
-</section>
-
-<section id="connect">
-<h2>Connect</h2>
-<ul class="social links">
-    <li><a href= "mailto: kenwardjr8592@gmail.com">Email</a></li>
-    <li><a href="https://github.com/kenward85/kenward85">Github</a></li>
-    </ul>
-    </section>
+    <h1>Open API Project</h1>
+    <script src="index.js"></script>
 </body>
 </html>
-</head>
